compiler-tests/src/test/data/diagnostic/dependencygraph/MixedCycleParams.fir.ir.diag.txt
/MixedCycleParams.kt:(501,511): error: [Metro/DependencyCycle] Found a dependency cycle while processing 'CycleGraph'.
Cycle:
    RealA
    --> A
    ~~> FakeA
    --> B
    --> RealA

Trace:
    RealA is injected at
        [CycleGraph] B()
    A is injected at
        [CycleGraph] RealA()
    FakeA is injected at
        [CycleGraph] FakeA.MetroContributionToUnit.bindsAsA(…, instance)
    B is injected at
        [CycleGraph] FakeA(…, b)
    RealA is injected at
        [CycleGraph] B()
    ...

